3 user input buttons added. Code now runs whenever the buttons are pressed (one round is played)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
-        <script type = "text/javascript" src="main.js"></script>  
 
     </head>
     <body> 
@@ -21,10 +20,9 @@
         
             <div class="main-container">
                 <div class="button-column">
-                    <!-- <div class="rock-button"><button type="button">ROCK</button></div> -->
-                    <button class="rock-button" type="button">ROCK</button>
-                    <button class="paper-button" type="button">PAPER</button>
-                    <button class="scissors-button" type="button">SCISSORS</button>
+                    <button id="rock" class="rock-button" type="button">ROCK</button>
+                    <button id="paper" class="paper-button" type="button">PAPER</button>
+                    <button id="scissors" class="scissors-button" type="button">SCISSORS</button>
                 </div>
                 <div class="score-container">
                     <div class="player-score"></div>
@@ -34,6 +32,7 @@
 
 
 
+            <script type = "text/javascript" src="main.js"></script>  
 
     </body>
 </html>
