score tally now is just one increase number inside their own div container. Scoes are screwed up and subtract for some reason so that's what i'm going to fix next

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
                     <button id="scissors" class="scissors-button" type="button">SCISSORS</button>
                 </div>
                 <div class="score-container">
-                    <div class="player-score"></div>
-                    <div class="computer-score"></div>
+                    <div class="player-score">
+                        <p id="score-tally">0</p>
+                    </div>
+                    <div class="computer-score">
+                        <p id="computer-score-tally">0</p>
+                    </div>
                 </div>
             </div>
 
