The score can only go as high as 5 before the program stops tracking score. Scores are added dynamically into their score container. Text is dynamically added to show what is happening via text as the progeam runs.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,18 @@
                     <button id="paper" class="paper-button" type="button">PAPER</button>
                     <button id="scissors" class="scissors-button" type="button">SCISSORS</button>
                 </div>
-                <div class="score-container">
-                    <div class="player-score">
-                        <p id="score-tally">0</p>
-                    </div>
-                    <div class="computer-score">
-                        <p id="computer-score-tally">0</p>
-                    </div>
+            <div class="score-container">
+                <div class="player-score">
+                    <p id="your-score">Your Score</p>
+                    <p id="score-tally">0</p>
+                </div>
+                <div class="computer-score">
+                    <p id="computer-score">Computer Score</p>
+                    <p id="computer-score-tally">0</p>
+                </div>
+                </div>
+                <div id="score-text-container">
+                    <p id="score-text">First to 5 Wins!</p>
                 </div>
             </div>
 
