after 5 rounds, the game declares a winner. Lastly need to add a reset button.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </div>
                 <div id="score-text-container">
                     <p id="score-text">First to 5 Wins!</p>
+                    <p id="round-tracker">Chose Rock, Paper or Scissors to play a round</p>
                 </div>
             </div>
 
