reset button added when game is up

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+      
 
     </head>
     <body> 
@@ -38,6 +41,7 @@
                     <p id="score-text">First to 5 Wins!</p>
                     <p id="round-tracker">Chose Rock, Paper or Scissors to play a round</p>
                 </div>
+                <div id="play-again"><!--<button onclick="refreshPage()" type="button">reset</button>--></div>
             </div>
 
 
