--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
         <![endif]-->
         
             <div class="main-container">
+                <div>
+                    <h1 class="intro-text">This is the graphic intro...</h1>
+                </div>
                 <div class="button-column">
-                    <button id="rock" class="rock-button" type="button">ROCK</button>
-                    <button id="paper" class="paper-button" type="button">PAPER</button>
-                    <button id="scissors" class="scissors-button" type="button">SCISSORS</button>
+                    <button id="rock" class="rock-button" type="button"></button>
+                    <button id="paper" class="paper-button" type="button"></button>
+                    <button id="scissors" class="scissors-button" type="button"></button>
                 </div>
             <div class="score-container">
                 <div class="player-score">
@@ -38,8 +41,8 @@
                 </div>
                 </div>
                 <div id="score-text-container">
-                    <p id="score-text">First to 5 Wins!</p>
-                    <p id="round-tracker">Chose Rock, Paper or Scissors to play a round</p>
+                    <p id="score-text"></p>
+                    <p class="intro-text" id="round-tracker">Chose Rock, Paper or Scissors to play a round</p>
                 </div>
                 <div id="play-again"><!--<button onclick="refreshPage()" type="button">reset</button>--></div>
             </div>
