--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 class="intro-text">This is the graphic intro...</h1>
         </div>
 
-            <div class="main-container" id="reveal">
+            <div class="main-container revealMain" id="reveal">
                 <div class="button-column">
                     <button id="rock" class="rock-button" type="button"></button>
                     <button id="paper" class="paper-button" type="button"></button>
