final page loading on time. Project done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <![endif]-->
         
         <div id="intro-text-hidden" >
-            <h1 class="intro-text">This is the graphic intro...</h1>
+            <h1 class="intro-text">A game is the foot...</h1>
         </div>
 
             <div class="main-container revealMain" id="reveal">
@@ -46,7 +46,9 @@
                     <p class="intro-text" id="round-tracker">Chose Rock, Paper or Scissors to play a round</p>
                 </div>
             </div>
-        <div id="play-again"></div>
+        
+            <div id="final-text-container"></div> 
+            <div id="play-again"></div>
 
             <script type = "text/javascript" src="main.js"></script>  
 
